--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "react-router-dom": "^4.2.2"
   }
 }
