--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
-    "react-router-dom": "^4.2.2"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2"
   }
 }
