--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "classnames": "^2.2.5"
+    "classnames": "^2.2.5",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   }
 }
