--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "classnames": "^2.2.5",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   }
 }
